Fixed h3 overflow issue for section heads

--- a/css/registration.css
+++ b/css/registration.css
@@ -54,7 +54,7 @@ footer {
   width: 100%;
 }
 
-h3 {
+section h3 {
   width: 100%;
   background-color: black;
   color: white;
